--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">June 30, 2024</span>
-									<h2><a href="./main_project.html">Main Project</a></h2>
+									<h2><a href="./main_project.html">Biodiversity in National Parks</a></h2>
 									<p>Excel, SQL, Tableu, and Python Pandas</p>
 								</header>
 								<a href="./main_project.html" class="image main"><img src="images/analytics 1.jfif" alt="" /></a>
