--- a/Resume.html
+++ b/Resume.html
@@ -68,7 +68,7 @@
 								</ul>
 								<hr>
 								<p><strong><center><u>Experience</u></center></strong></p>
-								<p><strong>Since July 2024 up-to-date <br /><i>Data Analyst Intern</i></strong> with <a href="https://www.unifiedmentor.com/" target="_blank">Unified Mentor Private Limited</a></p>
+								<p><strong>Since July 2024 up-to-date <br /><i>Data Analyst Intern</i></strong> with <a href="https://www.unifiedmentor.com/" target="_blank"><strong>Unified Mentor Private Limited</strong></a></p>
 								<ul>
 									<li>Data Cleaning</li>
 									<li>Data Visualisation</li>
@@ -78,15 +78,33 @@
 								</ul>
 								<hr>
 								<p><strong><center><u>Education</u></center></strong></p>
-								<p><strong>January 2024 - December 2026 <br /><i><u>Master of Arts in Economics</i></strong> with the <strong>University of Malawi</strong></u></p>
-								<br />
-								<p><strong>August 2021 - September 2022 <br /><i><u>University Certificate of Education (UCE)</i></strong> from <strong>Malawi Assemblies of God University</strong></u></p>
-								<br />
-								<p><strong>August 2012 - September 2016 <br /><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u></p>
+								<p>1. <strong><i><u>Master of Arts in Economics</i></strong> from <strong>University of Malawi</strong></u><br /><strong>July 2024 - December 2026 </strong></p>
+								<ul class="action special">
+									<li <a href="#" class="button" target="_blank">Certificate</a></li>   
+									<li <a href="#" class="button" target="_blank">Transcript</a></li>
+								</ul>
+								<p>2. <strong><i><u>University Certificate of Education</i></strong> from <strong>Malawi Assemblies of God University</strong></u><br /><strong>August 2021 - September 2022</strong></p>
+								<ul class="action special">
+									<li <a href="https://drive.google.com/file/d/1vKlQo21tm9Lj8udCWWnswJiK0XPf8rKU/view?usp=sharing" class="button" target="_blank">Certificate</a></li>   
+									<li <a href="https://drive.google.com/file/d/1X-7po-pCBRqim16UrLkzCsY0Rzd9H8yj/view?usp=sharing" class="button" target="_blank">Transcript</a></li>
+								</ul>
+								<p>3. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
+								<ul class="action special">
+									<li <a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">Certificate</a></li>   
+									<li <a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a></li>
+								</ul>
 								<hr>
 								<p><strong><center><u>Professional Certification</u></center></strong></p>
-								<p><strong>May 2023 - August 2024 <br /><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest</strong></u></p>
-								<p><strong>January 2024 - August 2024 <br /><i><u>Business Intelligence with Tableau</i></strong> from <strong>DataQuest</strong></u></p>
+								<p>1. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2023 - August 2024 </strong></p>
+								<ul class="action special">
+									<li <a href="#" class="button" target="_blank">Certificate</a></li>   
+									<!--<li <a href="" class="button" target="_blank">Transcript</a></li>-->
+								</ul>
+								<p>2. <strong><i><u>Business Intelligence with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>Janaury - August 2024 </strong></p>
+								<ul class="action special">
+									<li <a href="#" class="button" target="_blank">Certificate</a></li>   
+									<!--<li <a href="" class="button" target="_blank">Transcript</a></li>-->
+								</ul>
 								<hr>
 								<p><strong><center><u>Passion</u></center></strong></p>
 								<ul>
