Removed Masters credencials

--- a/Resume.html
+++ b/Resume.html
@@ -78,17 +78,12 @@
 								</ul>
 								<hr>
 								<p><strong><center><u>Education</u></center></strong></p>
-								<p>1. <strong><i><u>Master of Arts in Economics</i></strong> from <strong>University of Malawi</strong></u><br /><strong>July 2024 - December 2026 </strong></p>
-								<ul class="action special">
-									<a href="https://1drv.ms/x/c/c9ffcb8dd652be72/EaKcPdTr055KscSKzVKRSIgBpKPbYqKTLQIBuZc1V2AhUQ?e=k7wAk6" class="button" target="_blank">Certificate</a>   
-									<a href="#" class="button" target="_blank">Transcript</a>
-								</ul>
-								<p>2. <strong><i><u>University Certificate of Education</i></strong> from <strong>Malawi Assemblies of God University</strong></u><br /><strong>August 2021 - September 2022</strong></p>
+								<p>1. <strong><i><u>University Certificate of Education</i></strong> from <strong>Malawi Assemblies of God University</strong></u><br /><strong>August 2021 - September 2022</strong></p>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1vKlQo21tm9Lj8udCWWnswJiK0XPf8rKU/view?usp=sharing" class="button" target="_blank">Certificate</a>   
 									<a href="https://drive.google.com/file/d/1X-7po-pCBRqim16UrLkzCsY0Rzd9H8yj/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
-								<p>3. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
+								<p>2. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">Certificate</a>   
 									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a>
@@ -98,18 +93,19 @@
 								<p>1. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2023 - August 2024 </strong></p>
 								<ul class="action special">
 									<a href="#" class="button" target="_blank">Certificate</a>  
-									<!--<li <a href="" class="button" target="_blank">Transcript</a></li>-->
+									<a href="" class="button" target="_blank">Transcript</a>
 								</ul>
 								<p>2. <strong><i><u>Business Intelligence with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>Janaury - August 2024 </strong></p>
 								<ul class="action special">
 									<a href="#" class="button" target="_blank">Certificate</a>   
-									<!--<li <a href="" class="button" target="_blank">Transcript</a></li>-->
+									<a href="" class="button" target="_blank">Transcript</a>
 								</ul>
 								<hr>
 								<p><strong><center><u>Passion</u></center></strong></p>
 								<ul>
 									<li>Python programming for Data Analytics</li>
 									<li>Web Development with HTML, CSS and JavaScript</li>
+									<li>Teaching Mathematics and Computer Studies</li>
 								</ul>
 								<hr>
 							</section>
