--- a/Resume.html
+++ b/Resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>McBrown Mewale Resume</title>
+		<title>McBrown Mwale Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,10 +45,11 @@
 								<header class="major">
 									<span class="date">June 30, 2024</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
-									<h3><em>McBrown Wilfred Mwale</em><br /> <u>Data Analyst</u></h3>
-									<p>mcbrown_mwale@yahoo.com<br />
-									<a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank">Linkedin.com/in/mcbrownmwale</a><br />
-									+265 888 177 387</p>
+									<h3><em>McBrown Wilfred Mwale</em></h3>
+									<h3><u>Data Analyst</u></h3>
+									<p>mcbrown_mwale@yahoo.com</p>
+									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank">Linkedin.com/in/mcbrownmwale</a></p>
+									<p>+265 888 177 387</p>
 								</header>
 								<hr>
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div>-->
