--- a/Resume.html
+++ b/Resume.html
@@ -51,33 +51,35 @@
 									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank">Linkedin.com/in/mcbrownmwale</a></p>
 									<p>+265 888 177 387</p>
 								</header>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div>-->
 								<p><strong><u><center>About Me</center></u></strong></p>
-								<p>I realised my passion and interest for working with data during my time in college pursuing a Bachelors degree in Economics. After I graduated I did not take data seriously as the focus was on finding a job to sustain my life. The passion I had for becoming a Data Specialist kept on intriguing me until I eventually decided to start taking online cources in Data Analytics in order to equip myself with the technical knowledge and skills for working with data to supplement the knowledge acquired during my time in college. Through online courses I have developed the skills for working with <strong>Python, Structured Query Language (SQL), Tableau and Excel for Data Analytics</strong>. Since then my curiosity for guiding decision making through wisdom and knowlwdge obtained from raw data has kept on growing and led me to start studying for a <strong>Master of Arts in Economics</strong> with the University of Malawi. Everything is being done to make sure that I keep on growing professionaly as a Data Specialist.</p>
-								<hr>
+								<p>A dynamic and organised Data Analyst with two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, as well as designing capability-driven data visualisations. </p>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Skills</u></center></strong></p>
 								<ul>
-									<li>Data Cleaning</li>
-									<li>Data Visualisation</li>
-									<li>Python for Data Analysis</li>
-									<li>Advanced Excel</li>
-									<li>Structured Query Language</li>
-									<li>Statistical Analysis</li>
-									<li>Economics Modelling</li>
-									<li>Tableau</li>
+									<li>Designing and creating meaningful data visualisation to report and communicate insights.</li>
+									<li>Collecting and assimilating data from multiple sources, both internal and external.</li>
+									<li>Performing exploratory analysis to identify patterns and insights in the data.</li>
+									<li>Implementing and deploying models using predictive analytics to forecast outcomes.</li>
+									<li>Working with and presenting models using predictive analytics to forecast outcomes.</li>
+									<li>Translating complex data-driven analysis into simple, easy-to-understand insights.</li>
+									<li>Creating and maintaining data dictionaries and other forms of metadata.</li>
+									<li>Supporting data integrations, cleansing and quality solutions.</li>
+									<li>Utilizing technologies such as statistical and graphical tools to drive data insights.</li>
 								</ul>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Experience</u></center></strong></p>
-								<p><strong>Since July 2024 up-to-date <br /><i>Data Analyst Intern</i></strong> with <a href="https://www.unifiedmentor.com/" target="_blank"><strong>Unified Mentor Private Limited</strong></a></p>
+								<p><u><strong><i>Data Analyst Intern</i></strong> with <a href="https://www.unifiedmentor.com/" target="_blank"><strong>Unified Mentor Private Limited</u></strong></a> <br /> <strong>July 2024 up-to-date</strong> </p>
 								<ul>
-									<li>Data Cleaning</li>
-									<li>Data Visualisation</li>
-									<li>Statistical Analysis</li>
-									<li>Confimatory Analysis</li>
-									<li>Data Analysis</li>
+									<li>Utilised statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
+									<li>Assisted in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
+									<li>Demonstrated strong attention to detail, resulting in a 25% decrease in errors.</li>
+									<li>Analysed large sets of data resulting in 10% increase in efficiency and productivity.</li>
+									<li>Demonstrated strong ability to do quality work for the usual projects that an individual would be assigned at this level.</li>
+									<li>Executed tasks effectivel and efficiently resulting in a 15% increase in departmental productivity.</li>
 								</ul>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Education</u></center></strong></p>
 								<p>1. <strong><i><u>University Certificate of Education</i></strong> from <strong>Malawi Assemblies of God University</strong></u><br /><strong>August 2021 - September 2022</strong></p>
 								<ul class="action special">
@@ -89,7 +91,7 @@
 									<a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">Certificate</a>   
 									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Professional Certification</u></center></strong></p>
 								<p>1. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2023 - August 2024 </strong></p>
 								<ul class="action special">
@@ -101,14 +103,22 @@
 									<a href="#" class="button" target="_blank">Certificate</a>   
 									<a href="" class="button" target="_blank">Transcript</a>
 								</ul>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
+								<p><strong><center><u>Tools</u></center></strong></p>
+								<ul>
+									<li>Python for Data Analysis [Pandas, Numpy, Matplotlib, Seaborn]</li>
+									<li>Tableau</li>
+									<li>Excel</li>
+									<li>Structured Query Language (SQL)</li>
+								</ul>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Passion</u></center></strong></p>
 								<ul>
 									<li>Python programming for Data Analytics</li>
 									<li>Web Development with HTML, CSS and JavaScript</li>
 									<li>Teaching Mathematics and Computer Studies</li>
 								</ul>
-								<hr>
+								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 							</section>
 
 					</div>
