--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
 								<article>
 									<header>
 										<span class="date">June 30, 2024</span>
-										<h2><a href="./project_1.html">Excel Project One</a></h2>
+										<h2><a href="./project_1.html">Analysing Churn Rate</a></h2>
+										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/analytics 2.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, descriptive statistics will be used to explore and analyse data to identify customers who are likely to churn for a telecumication provider.</p>
+									<br />
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
 									</ul>
@@ -80,10 +82,11 @@
 								<article>
 									<header>
 										<span class="date">June 30, 2024</span>
-										<h2><a href="./project_2.html">Excel Project Two</a></h2>
+										<h2><a href="./project_2.html">Analysing Retail Sales</a></h2>
+										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/analytics 3.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I will take on the role of an Anaylist for a Chain of Retail Stores. The Chief Financial Officer has tasked me with creating a study that explores the Chain Store's Performance over the past few years across all categories.</p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
@@ -92,6 +95,7 @@
 									<header>
 										<span class="date">June 30, 2024</span>
 										<h2><a href="./project_3.html">SQL Project One</a></h2>
+										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/analytics 4.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -103,6 +107,7 @@
 									<header>
 										<span class="date">June 30, 2024</span>
 										<h2><a href="./project_4.html">SQL Project Two</a></h2>
+										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_4.html" class="image fit"><img src="Images/analytics 5.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -114,6 +119,7 @@
 									<header>
 										<span class="date">June 30, 2024</span>
 										<h2><a href="./project_5.html">Tableau Project One</a></h2>
+										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_5.html" class="image fit"><img src="Images/analytics 6.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -125,6 +131,7 @@
 									<header>
 										<span class="date">June 30, 2024</span>
 										<h2><a href="./project_6.html">Tableau Project Two</a></h2>
+										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_6.html" class="image fit"><img src="Images/analytics 7.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
