updates made to the portifolio

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>McBrown Mwale</h1>
-						<p style="font-size: 50px;"><strong><i>Data Analyst</i></strong></p>
-						<p><strong>|| Advanced Excel | SQL | Tableau | Python ||</strong></p>
+						<h1>McBrown Wilfred Mwale</h1>
+						<p style="font-size: 50px;"><strong><i>Data Scientist</i></strong></p>
+						<p><strong>|| Python | SQL | Tableau | Excel ||</strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -55,8 +55,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">June 30, 2024</span>
-									<h2><a href="./main_project.html">Biodiversity in National Parks</a></h2>
-									<p>Excel, SQL, Tableu, and Python Pandas</p>
+									<h2><a href="./main_project.html">Employee Attrition</a></h2>
+									<p><strong> Python & Tableau </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
 								<ul class="actions special">
@@ -195,7 +195,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mcbrown_mwale@yahoo.com</a></p>
+								<p><a href="#">mcbrownwilfred@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -209,9 +209,9 @@
 						</section>
 					</footer>
 
-				<!-- Copyright -->
+				<!-- Copyright-->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; MCBROWN WILFRED MWALE</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
