--- a/project_1.html
+++ b/project_1.html
@@ -94,7 +94,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mcbrown_mwale@yahoo.com</a></p>
+								<p><a href="#">mcbrownwilfred@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
