--- a/Resume.html
+++ b/Resume.html
@@ -46,15 +46,15 @@
 									<span class="date">June 30, 2024</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
 									<h3><em>McBrown Wilfred Mwale</em></h3>
-									<h3><u>Data Analyst</u></h3>
-									<p>mcbrown_mwale@yahoo.com</p>
+									<h3><u>Data Scientist</u></h3>
+									<p>mcbrownwilfred@yahoo.com</p>
 									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank">Linkedin.com/in/mcbrownmwale</a></p>
 									<p>+265 888 177 387</p>
 								</header>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div>-->
 								<p><strong><u><center>About Me</center></u></strong></p>
-								<p>A dynamic and organised Data Analyst with two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, as well as designing capability-driven data visualisations. </p>
+								<p>A dynamic and organised Data Scientist with more than two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, as well as designing capability-driven data visualisations. </p>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Skills</u></center></strong></p>
 								<ul>
@@ -125,7 +125,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--<section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -145,7 +145,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section>-->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -158,7 +158,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mcbrown_mwale@yahoo.com</a></p>
+								<p><a href="#">mcbrownwilfred@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -174,7 +174,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; MCBROWN WILFRED MWALE</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
