--- a/project_2.html
+++ b/project_2.html
@@ -94,7 +94,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mcbrown_mwale@yahoo.com</a></p>
+								<p><a href="#">mcbrownwilfred@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -108,10 +108,10 @@
 						</section>
 					</footer>
 
-				<!-- Copyright -->
+				<!-- Copyright
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+					</div>-->
 
 			</div>
 
