--- a/Resume.html
+++ b/Resume.html
@@ -93,15 +93,20 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Professional Certification</u></center></strong></p>
-								<p>1. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2023 - August 2024 </strong></p>
+								<p>1. <strong><i><u>Business Analyst with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
 								<ul class="action special">
-									<a href="#" class="button" target="_blank">Certificate</a>  
-									<a href="" class="button" target="_blank">Transcript</a>
+									<a href="https://drive.google.com/file/d/11rWT0j0IDgT4IDpeBLX2j2ByaYT0kWBx/view?usp=sharing" class="button" target="_blank">Certificate</a>  
+									<a href="app.dataquest.io/profile/mcbrownwilfred1" class="button" target="_blank">View Profile</a>
 								</ul>
-								<p>2. <strong><i><u>Business Intelligence with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>Janaury - August 2024 </strong></p>
+								<p>2. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April - July 2024 </strong></p>
 								<ul class="action special">
-									<a href="#" class="button" target="_blank">Certificate</a>   
-									<a href="" class="button" target="_blank">Transcript</a>
+									<a href="https://drive.google.com/file/d/1AD31bTE0aXLTT4KZRoZYR8dj6kOz-VJ1/view?usp=sharing" class="button" target="_blank">Certificate</a>   
+									<a href="app.dataquest.io/profile/mcbrownwilfred1" class="button" target="_blank">View Profile</a>
+								</ul>
+								<p>3. <strong><i><u>SQL Fundamentals</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January - July 2024 </strong></p>
+								<ul class="action special">
+									<a href="https://drive.google.com/file/d/15ae3NQPKtwYKVz9_bXdcpKLmcRP4xuJr/view?usp=sharing" class="button" target="_blank">Certificate</a>   
+									<a href="app.dataquest.io/profile/mcbrownwilfred1" class="button" target="_blank">View Profile</a>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Tools</u></center></strong></p>
