Update Resume html and index html

--- a/Resume.html
+++ b/Resume.html
@@ -83,15 +83,15 @@
 								<p><strong><center><u>Education</u></center></strong></p>
 								<p>1. <strong><i><u>University Certificate of Education</i></strong> from <strong>Malawi Assemblies of God University</strong></u><br /><strong>August 2021 - September 2022</strong></p>
 								<ul>
-									<li>Pedagical Studies.</li>
+									<li>Pedagogical Studies.</li>
 									<li>Art and Science of Teaching and Learning.</li>
 									<li>Psychology, Sociology and Philosophy of Learning.</li>
 									<li>Testing and Measurement.</li>
 									<li>Instruction Media and Technology.</li>
 								</ul>
 								<ul class="action special">
-									<a href="https://drive.google.com/file/d/1vKlQo21tm9Lj8udCWWnswJiK0XPf8rKU/view?usp=sharing" class="button" target="_blank">View Certificate</a>   
-									<a href="https://drive.google.com/file/d/1X-7po-pCBRqim16UrLkzCsY0Rzd9H8yj/view?usp=sharing" class="button" target="_blank">View Transcript</a>
+									<a href="https://drive.google.com/file/d/1vKlQo21tm9Lj8udCWWnswJiK0XPf8rKU/view?usp=sharing" class="button" target="_blank">Certificate</a>   
+									<a href="https://drive.google.com/file/d/1X-7po-pCBRqim16UrLkzCsY0Rzd9H8yj/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
 								<p>2. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
 								<ul>
@@ -102,8 +102,8 @@
 									<li>Data Analytics.</li>
 								</ul>
 								<ul class="action special">
-									<a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">View Certificate</a>   
-									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">View Transcript</a>
+									<a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">Certificate</a>   
+									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Professional Certification</u></center></strong></p>
@@ -223,7 +223,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; MCBROWN WILFRED MWALE</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; MCBROWN WILFRED MWALE</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>--></ul>
 					</div>
 
 			</div>
