--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--<section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -180,7 +180,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -211,7 +211,7 @@
 
 				<!-- Copyright-->
 					<div id="copyright">
-						<ul><li>&copy; MCBROWN WILFRED MWALE</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; MCBROWN WILFRED MWALE</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>--></ul>
 					</div>
 
 			</div>
