--- a/Resume.html
+++ b/Resume.html
@@ -130,7 +130,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/11rWT0j0IDgT4IDpeBLX2j2ByaYT0kWBx/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>3. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April - July 2024 </strong></p>
+								<p>3. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2024 - July 2024 </strong></p>
 								<ul>
 									<li>Preparing Data in Excel.</li>
 									<li>Visualising Data in Excel.</li>
@@ -141,7 +141,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1AD31bTE0aXLTT4KZRoZYR8dj6kOz-VJ1/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>4. <strong><i><u>SQL Fundamentals</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January - July 2024 </strong></p>
+								<p>4. <strong><i><u>SQL Fundamentals</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
 								<ul>
 									<li>Introduction to SQL and Databases.</li>
 									<li>Summarising Data in SQL.</li>
