--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>McBrown Wilfred Mwale</h1>
 						<p style="font-size: 50px;"><strong><i>Data Scientist</i></strong></p>
-						<p><strong>|| Python | SQL | Tableau | Excel ||</strong></p>
+						<p><strong>|| Python | SQL | Tableau ||</strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,9 +54,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">June 30, 2024</span>
+									<span class="date">July 31, 2024</span>
 									<h2><a href="./main_project.html">Employee Attrition</a></h2>
-									<p><strong> Python & Tableau </strong></p>
+									<p><strong> Python, SQL & Tableau </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
 								<ul class="actions special">
@@ -68,9 +68,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_1.html">Analysing Churn Rate</a></h2>
-										<p style="text-align: center;"><strong>Excel</strong></p>
+										<p style="text-align: center;"><strong>Python</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/analytics 2.jfif" alt="" /></a>
 									<p>In this project, descriptive statistics will be used to explore and analyse data to identify customers who are likely to churn for a telecumication provider.</p>
@@ -81,9 +81,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_2.html">Analysing Retail Sales</a></h2>
-										<p style="text-align: center;"><strong>Excel</strong></p>
+										<p style="text-align: center;"><strong>Python</strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/analytics 3.jfif" alt="" /></a>
 									<p>In this project, I will take on the role of an Anaylist for a Chain of Retail Stores. The Chief Financial Officer has tasked me with creating a study that explores the Chain Store's Performance over the past few years across all categories.</p>
@@ -93,7 +93,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_3.html">SQL Project One</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
@@ -105,7 +105,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_4.html">SQL Project Two</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
@@ -117,7 +117,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_5.html">Tableau Project One</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
@@ -129,7 +129,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 2024</span>
+										<span class="date">July 31, 2024</span>
 										<h2><a href="./project_6.html">Tableau Project Two</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
