--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>McBrown Wilfred Mwale</h1>
 						<p style="font-size: 50px;"><strong><i>Data Scientist</i></strong></p>
-						<p><strong>|| Python | SQL | Tableau ||</strong></p>
+						<p><strong>|| Python | SQL | Tableau | Excel ||</strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
