updated portfolio website

--- a/Resume.html
+++ b/Resume.html
@@ -46,21 +46,21 @@
 									<span class="date">July 31, 2024</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
 									<h3><em>McBrown Wilfred Mwale</em></h3>
-									<h3><u>Data Scientist</u></h3>
-									<p>mcbrownwilfred@yahoo.com</p>
-									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank">Linkedin.com/in/mcbrownmwale</a></p>
-									<p>+265 888 177 387</p>
+									<h3><u>Data Analyst</u></h3>
+									<p><strong>mcbrownwilfred@yahoo.com</strong></p>
+									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank"><strong>LinkedIn</strong></a></p>
+									<p><strong>+265 888 177 387</strong></p>
 								</header>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div>-->
 								<p><strong><u><center>About Me</center></u></strong></p>
-								<p>A dynamic and organised Data Scientist with more than two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, as well as designing capability-driven data visualisations. </p>
+								<p>A dynamic and organised Data Analyst with more than two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, and designing capability-driven data visualisations. </p>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Skills</u></center></strong></p>
 								<ul>
 									<li>Designing and creating meaningful data visualisation to report and communicate insights.</li>
 									<li>Collecting and assimilating data from multiple sources, both internal and external.</li>
-									<li>Performing exploratory analysis to identify patterns and insights in the data.</li>
+									<li>Performing exploratory data analysis to identify patterns and insights in the data.</li>
 									<li>Implementing and deploying models using predictive analytics to forecast outcomes.</li>
 									<li>Working with and presenting models using predictive analytics to forecast outcomes.</li>
 									<li>Translating complex data-driven analysis into simple, easy-to-understand insights.</li>
@@ -70,14 +70,14 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Experience</u></center></strong></p>
-								<p><u><strong><i>Data Analyst Intern</i></strong> with <a href="https://www.unifiedmentor.com/" target="_blank"><strong>Unified Mentor Private Limited</u></strong></a> <br /> <strong>July 2024 up-to-date</strong> </p>
+								<p><u><strong><i>Data Analyst</i></strong> with <a href="" target="_blank"><strong>Kasiwa Academy</u></strong></a> <br /> <strong>July 2024 up-to-date</strong> </p>
 								<ul>
-									<li>Utilised statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
-									<li>Assisted in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
-									<li>Demonstrated strong attention to detail, resulting in a 25% decrease in errors.</li>
-									<li>Analysed large sets of data resulting in 10% increase in efficiency and productivity.</li>
-									<li>Demonstrated strong ability to do quality work for the usual projects that an individual would be assigned at this level.</li>
-									<li>Executed tasks effectivel and efficiently resulting in a 15% increase in departmental productivity.</li>
+									<li>I utilise statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
+									<li>I assist in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
+									<li>I have consistently demonstrated strong attention to detail, resulting in a 25% decrease in errors.</li>
+									<li>I analysed large sets of data resulting in 10% increase in efficiency and productivity.</li>
+									<li>I have demonstrated strong ability to do quality work for the usual projects that an individual would be assigned at this level.</li>
+									<li>I executed tasks effectively and efficiently resulting in a 15% increase in departmental productivity.</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Education</u></center></strong></p>
@@ -156,9 +156,9 @@
 								<p><strong><center><u>Tools</u></center></strong></p>
 								<ul>
 									<li>Python for Data Analysis [Pandas, Numpy, Matplotlib, Seaborn].</li>
+									<li>SQL [PostgreSQL, MySQL, MS Sql].</li>
 									<li>Tableau.</li>
-									<li>Excel.</li>
-									<li>Structured Query Language (SQL).</li>
+									<li>Excel</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:black; background-color: black;">
 								<p><strong><center><u>Passion</u></center></strong></p>
@@ -198,8 +198,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Armour Battalion CDSS<br />
-								Mvera, Malawi</p>
+								<p>Kasiwa Academy<br />
+								Lilongwe, Malawi</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
