--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>McBrown Wilfred Mwale</h1>
-						<p style="font-size: 50px;"><strong><i>Data Scientist</i></strong></p>
+						<p style="font-size: 50px;"><strong><i>Data Analyst</i></strong></p>
 						<p><strong>|| Python | SQL | Tableau | Excel ||</strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -185,8 +185,8 @@
 							<section class="alt">
 								<h3>Address</h3>
 								<p>
-									Armour Battalion CDSS,<br />
-									Mvera, Malawi.
+									Kasiwa Academy,<br />
+									Lilongwe, Malawi.
 								</p>
 							</section>
 							<section>
