--- a/project_1.html
+++ b/project_1.html
@@ -85,8 +85,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Armour Battalion CDSS<br />
-								Mvera, Malawi</p>
+								<p>Kasiwa Academy<br />
+								Lilongwe, Malawi</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
