--- a/project_6.html
+++ b/project_6.html
@@ -58,7 +58,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--<section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -78,12 +78,12 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section>-->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Armour Battalion CDSS<br />
-								Mvera, Malawi</p>
+								<p>Kasiwa Academy<br />
+								Lilongwe, Malawi</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
