updated my resume

--- a/Resume.html
+++ b/Resume.html
@@ -45,8 +45,8 @@
 								<header class="major">
 									<span class="date">July 31, 2024</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
-									<h3><em>McBrown Wilfred Mwale</em></h3>
-									<h3><u>Data Analyst</u></h3>
+									<h3>McBrown Mwale</h3>
+									<h3><em>Data Analyst</em></h3>
 									<p><strong>mcbrownwilfred@yahoo.com</strong></p>
 									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank"><strong>LinkedIn</strong></a></p>
 									<p><strong>+265 888 177 387</strong></p>
