--- a/project_3.html
+++ b/project_3.html
@@ -91,7 +91,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mcbrown_mwale@yahoo.com</a></p>
+								<p><a href="#">mcbrownwilfred@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -106,9 +106,9 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
+					<!--<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+					</div>-->
 
 			</div>
 
