updates to my portifolio

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">July 31, 2024</span>
-									<h2><a href="./main_project.html">Employee Attrition</a></h2>
-									<p><strong> Python, SQL & Tableau </strong></p>
+									<span class="date">August 31, 2024</span>
+									<h2><a href="./main_project.html">Python Project</a></h2>
+									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
 								<ul class="actions special">
@@ -68,9 +68,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_1.html">Analysing Churn Rate</a></h2>
-										<p style="text-align: center;"><strong>Python</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_1.html">Tableau Project One</a></h2>
+										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/analytics 2.jfif" alt="" /></a>
 									<p>In this project, descriptive statistics will be used to explore and analyse data to identify customers who are likely to churn for a telecumication provider.</p>
@@ -81,9 +81,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_2.html">Analysing Retail Sales</a></h2>
-										<p style="text-align: center;"><strong>Python</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_2.html">Tableau Project Two</a></h2>
+										<p style="text-align: center;"><strong> Tableau </strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/analytics 3.jfif" alt="" /></a>
 									<p>In this project, I will take on the role of an Anaylist for a Chain of Retail Stores. The Chief Financial Officer has tasked me with creating a study that explores the Chain Store's Performance over the past few years across all categories.</p>
@@ -93,9 +93,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_3.html">SQL Project One</a></h2>
-										<p style="text-align: center;"><strong>SQL</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_3.html">Excel Project One</a></h2>
+										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/analytics 4.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -105,9 +105,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_4.html">SQL Project Two</a></h2>
-										<p style="text-align: center;"><strong>SQL</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_4.html">Excel Project Two</a></h2>
+										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_4.html" class="image fit"><img src="Images/analytics 5.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -117,9 +117,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_5.html">Tableau Project One</a></h2>
-										<p style="text-align: center;"><strong>Tableau</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_5.html">SQL Project One</a></h2>
+										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_5.html" class="image fit"><img src="Images/analytics 6.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -129,9 +129,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">July 31, 2024</span>
-										<h2><a href="./project_6.html">Tableau Project Two</a></h2>
-										<p style="text-align: center;"><strong>Tableau</strong></p>
+										<span class="date">August 31, 2024</span>
+										<h2><a href="./project_6.html">SQL Project Two</a></h2>
+										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_6.html" class="image fit"><img src="Images/analytics 7.jfif" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
