--- a/project_1.html
+++ b/project_1.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="" class="logo">Excel Project</a>
+						<a href="" class="logo">Tableau Project</a>
 					</header>
 
 				<!-- Nav -->
