--- a/project_5.html
+++ b/project_5.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="" class="logo">Main Project</a>
+						<a href="" class="logo">SQL Project</a>
 					</header>
 
 				<!-- Nav -->
