--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
+								<p><center>This project is not Published Yet.</center></p>
 								<ul class="actions special">
 									<li><a href="./main_project.html" class="button large">View Project</a></li>
 								</ul>
@@ -73,7 +74,7 @@
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/analytics 2.jfif" alt="" /></a>
-									<p>In this project, descriptive statistics will be used to explore and analyse data to identify customers who are likely to churn for a telecumication provider.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<br />
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
@@ -86,7 +87,7 @@
 										<p style="text-align: center;"><strong> Tableau </strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/analytics 3.jfif" alt="" /></a>
-									<p>In this project, I will take on the role of an Anaylist for a Chain of Retail Stores. The Chief Financial Officer has tasked me with creating a study that explores the Chain Store's Performance over the past few years across all categories.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
@@ -98,7 +99,7 @@
 										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/analytics 4.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_3.html" class="button">View Project</a></li>
 									</ul>
@@ -110,7 +111,7 @@
 										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_4.html" class="image fit"><img src="Images/analytics 5.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_4.html" class="button">View Project</a></li>
 									</ul>
@@ -122,7 +123,7 @@
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_5.html" class="image fit"><img src="Images/analytics 6.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_5.html" class="button">View Project</a></li>
 									</ul>
@@ -134,7 +135,7 @@
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_6.html" class="image fit"><img src="Images/analytics 7.jfif" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><center>This project is not Published Yet.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_6.html" class="button">View Project</a></li>
 									</ul>
