--- a/Resume.html
+++ b/Resume.html
@@ -49,7 +49,7 @@
 									
 									<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 									
-									<h3>Data Scientist</h3>
+									<h3>Data Analyst</h3>
 									<p><strong>mcbrownwilfred@yahoo.com</strong></p>
 									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank"><strong>LinkedIn</strong></a></p>
 									<p><strong>+265 888 177 387</strong></p>
