--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>McBrown Mwale</h1>
-						<p style="font-size: 50px;"><strong><i>Data Scientist</i></strong></p>
+						<p style="font-size: 50px;"><strong><i>Data Analyst</i></strong></p>
 						<p><strong>|| Python | SQL | Tableau | Excel ||</strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
