--- a/main_project.html
+++ b/main_project.html
@@ -50,16 +50,6 @@
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div> -->
 								<p><strong>Introduction</strong></p>
 								<p>What is the topic and why is it worth studying? – the first major section of text in the paper, the Introduction commonly describes the topic under investigation, summarizes or discusses relevant prior research, identifies unresolved issues that the current research will address, and provides an overview of the research that is to be described in greater detail in the sections to follow.</p>
-								<p><strong>Problem Statement</strong></p>
-								<p>A research problem statement is a clear, concise, and specific statement that describes the issue or problem that the research project addresses. It should be written in a way that is easily understandable to both experts and non-experts in the field.</p>
-								<p><strong>Objectives</strong></p>
-								<p>A set of specific and measurable objectives that the research project aims to achieve.<ol>
-									<li>-</li>
-									<li>-</li>
-									<li>-</li>
-									<li>-</li>
-									<li>-</li>
-								</ol></p>
 								<p><strong>Questions</strong></p>
 								<p>A set of questions that the research project aims to answer, in order to address the problem or issue.<ol>
 									<li>-</li>
@@ -68,14 +58,11 @@
 									<li>-</li>
 									<li>-</li>
 								</ol></p>
-								<p><strong>Methods</strong></p>
-								<p>What did you do? – a section which details how the research was performed.  It typically features a description of the participants/subjects that were involved, the study design, the materials that were used, and the study procedure.  If there were multiple experiments, then each experiment may require a separate Methods section.  A rule of thumb is that the Methods section should be sufficiently detailed for another researcher to duplicate your research.</p>
-								<p><strong>Results</strong></p>
-								<p>What did you find? – a section which describes the data that was collected and the results of any statistical tests that were performed.  It may also be prefaced by a description of the analysis procedure that was used. If there were multiple experiments, then each experiment may require a separate Results section.</p>
-								<p><strong>Discussion</strong></p>
+								<p><strong>Summary of Results</strong></p>
 								<p>What is the significance of your results? – the final major section of text in the paper.  The Discussion commonly features a summary of the results that were obtained in the study, describes how those results address the topic under investigation and/or the issues that the research was designed to address, and may expand upon the implications of those findings.  Limitations and directions for future research are also commonly addressed.</p>
+								<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 								<ul class="actions special">
-									<li><a href="#" class="button" target="_blank">Go To Workbook</a></li>
+									<li><a href="#" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
 								</ul>
 							</section>
 
