--- a/project_1.html
+++ b/project_1.html
@@ -64,6 +64,7 @@
 							<ul class="actions special">
 								<li><a href="#" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
 							</ul>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 						</section>
 
 					</div>
