--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 								<article>
 									<header>
 										<span class="date">August 31, 2024</span>
-										<h2><a href="./project_1.html">Tableau Project One</a></h2>
+										<h2><a href="./project_1.html">Amazon Sales for Africa</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
-									<a href="./project_1.html" class="image fit"><img src="Images/analytics 2.jfif" alt="" /></a>
-									<p><center>This project is not Published Yet.</center></p>
+									<a href="./project_1.html" class="image fit"><img src="Images/amazon_.jfif" alt="" /></a>
+									<p><center></center></p>
 									<br />
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
