--- a/project_1.html
+++ b/project_1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Analysing Churn Rate</title>
+		<title>Amazon Sales for Africa</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,7 +51,7 @@
 							<p><strong>Introduction</strong></p>
 							<p>Amazon is the word's largest retailer offering a wide range of products, services and digital content. It also provides cloud computing services through amazon web services, which is the largest cloud infrastructure platform in the world. Amazon depends on data for making constructive and strategic decisions. This project has used Amazon Sales data for years from 2010 to 2017 to come up with an interactive Tableau Dashbord that captures insights and trends about Amazon sales in African countries.</p>
 							<p><strong>Questions</strong></p>
-							<p style="line-height: 0%;">The Dashbord has answered the following data questions:
+							<p>The Dashbord has answered the following data questions:
 							<ol>
 								<li>What is the most profitable Sales Channel in Africa?</li>
 								<li>Which African country created high revenue for Amazon during the period under study?</li>
