--- a/main_project.html
+++ b/main_project.html
@@ -62,7 +62,7 @@
 								<p>What is the significance of your results? – the final major section of text in the paper.  The Discussion commonly features a summary of the results that were obtained in the study, describes how those results address the topic under investigation and/or the issues that the research was designed to address, and may expand upon the implications of those findings.  Limitations and directions for future research are also commonly addressed.</p>
 								<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 								<ul class="actions special">
-									<li><a href="#" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
+									<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_1/blob/main/NY_City_Bikes_Project.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							</section>
