--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/amazon_.jfif" alt="" /></a>
-									<p><center></center></p>
-									<br />
+									<p><center>___</center></p>
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
 									</ul>
@@ -83,11 +82,11 @@
 								<article>
 									<header>
 										<span class="date">August 31, 2024</span>
-										<h2><a href="./project_2.html">Tableau Project Two</a></h2>
-										<p style="text-align: center;"><strong> Tableau </strong></p>
+										<h2><a href="./project_2.html">Ebay Kleinanzein Cars data</a></h2>
+										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
-									<a href="./project_2.html" class="image fit"><img src="Images/analytics 3.jfif" alt="" /></a>
-									<p><center>This project is not Published Yet.</center></p>
+									<a href="./project_2.html" class="image fit"><img src="Images/ebay.jpg" alt="" /></a>
+									<p><center>___</center></p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
