--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<li><a href="./project_4.html" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										<span class="date">August 31, 2024</span>
 										<h2><a href="./project_5.html">SQL Project One</a></h2>
@@ -138,7 +138,7 @@
 									<ul class="actions special">
 										<li><a href="./project_6.html" class="button">View Project</a></li>
 									</ul>
-								</article>
+								</article>-->
 							</section>
 
 						<!-- Footer
