--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">August 31, 2024</span>
-									<h2><a href="./main_project.html">Python Project</a></h2>
+									<h2><a href="./main_project.html">Predicting Insurance Costs</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
-								<p><center>This project is not Published Yet.</center></p>
+								<p><center>Machine Learning Project</center></p>
 								<ul class="actions special">
 									<li><a href="./main_project.html" class="button large">View Project</a></li>
 								</ul>
