--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">August 31, 2024</span>
+									<span class="date">August 15, 2024</span>
 									<h2><a href="./main_project.html">Predicting Insurance Costs</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
@@ -69,7 +69,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August 31, 2024</span>
+										<span class="date">August 15, 2024</span>
 										<h2><a href="./project_1.html">Amazon Sales for Africa</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
@@ -81,7 +81,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August 31, 2024</span>
+										<span class="date">August 15, 2024</span>
 										<h2><a href="./project_2.html">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
@@ -93,7 +93,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August 31, 2024</span>
+										<span class="date">August 15, 2024</span>
 										<h2><a href="./project_3.html">Excel Project One</a></h2>
 										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
@@ -105,19 +105,19 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August 31, 2024</span>
-										<h2><a href="./project_4.html">Excel Project Two</a></h2>
+										<span class="date">August 15, 2024</span>
+										<h2><a href="./project_4.html">Bike Share Sales Analysis</a></h2>
 										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
 									<a href="./project_4.html" class="image fit"><img src="Images/analytics 5.jfif" alt="" /></a>
-									<p><center>This project is not Published Yet.</center></p>
+									<p><center>___</center></p>
 									<ul class="actions special">
 										<li><a href="./project_4.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!--<article>
 									<header>
-										<span class="date">August 31, 2024</span>
+										<span class="date">August 15, 2024</span>
 										<h2><a href="./project_5.html">SQL Project One</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
@@ -129,7 +129,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August 31, 2024</span>
+										<span class="date">August 15, 2024</span>
 										<h2><a href="./project_6.html">SQL Project Two</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
