--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 								<article>
 									<header>
 										<span class="date">August 31, 2024</span>
-										<h2><a href="./project_3.html">Microsoft Stock Data</a></h2>
-										<p style="text-align: center;"><strong>Excel</strong></p>
+										<h2><a href="./project_3.html">Analysing KickStarter Data</a></h2>
+										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/stock-market.jpg" alt="" width="200" height="300" /></a>
 									<p><center>___</center></p>
